<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.mimedicokotlinformedics.ui.home.HomeFragment"
        android:label="@string/home_text"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/PetitionsFragment"
        android:name="com.example.mimedicokotlinformedics.ui.petitions.PetitionsFragment"
        android:label="@string/petitions_label"
        tools:layout="@layout/fragment_petitions">
        <action
            android:id="@+id/action_PetitionsFragment_to_SendProposalFragment"
            app:destination="@id/SendProposalFragment" />
    </fragment>

    <fragment
        android:id="@+id/SendProposalFragment"
        android:name="com.example.mimedicokotlinformedics.ui.sendproposal.SendProposalFragment"
        android:label="@string/sendp_label"
        tools:layout="@layout/fragment_send_proposal">
        <argument
            android:name="petitionId"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/ConsultsFragment"
        android:name="com.example.mimedicokotlinformedics.ui.consults.ConsultsFragment"
        android:label="@string/consults_label"
        tools:layout="@layout/fragment_consults">
        <action
            android:id="@+id/action_ConsultsFragment_to_ChatFragment"
            app:destination="@id/ChatFragment" />
    </fragment>

    <fragment
        android:id="@+id/ChatFragment"
        android:name="com.example.mimedicokotlinformedics.ui.chat.ChatFragment"
        android:label="@string/chat_label"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="consultId"
            app:argType="string"/>
        <action
            android:id="@+id/action_ChatFragment_to_VideochatFragment"
            app:destination="@id/VideochatFragment" />
    </fragment>

    <fragment
        android:id="@+id/VideochatFragment"
        android:name="com.example.mimedicokotlinformedics.ui.videochat.VideochatFragment"
        android:label="Videochat"
        tools:layout="@layout/fragment_videochat" >
        <argument
            android:name="myUsername"
            app:argType="string" />
        <argument
            android:name="peerUsername"
            app:argType="string" />
    </fragment>

    <action
        android:id="@+id/action_to_HomeFragment"
        app:destination="@id/HomeFragment" />

    <action
        android:id="@+id/action_to_PetitionsFragment"
        app:destination="@id/PetitionsFragment" />

    <action
        android:id="@+id/action_to_ConsultsFragment"
        app:destination="@id/ConsultsFragment" />
</navigation>