<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/AuthFragment">

    <fragment
        android:id="@+id/AuthFragment"
        android:name="com.example.mimedicokotlinformedics.AuthFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_auth">

        <action
            android:id="@+id/action_MainFragment_to_SignupFragment"
            app:destination="@id/SignupFragment" />
        <action
            android:id="@+id/action_MainFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>

    <fragment
        android:id="@+id/SignupFragment"
        android:name="com.example.mimedicokotlinformedics.ui.signup.SignupFragment"
        android:label="@string/signup_label"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_SignupFragment_to_SignupTwoFragment"
            app:destination="@id/SignupTwoFragment" />
    </fragment>

    <fragment
        android:id="@+id/SignupTwoFragment"
        android:name="com.example.mimedicokotlinformedics.ui.signuptwo.SignupTwoFragment"
        android:label="@string/signup_label"
        tools:layout="@layout/fragment_signup_two">
        <argument
            android:name="firstname"
            app:argType="string"/>
        <argument
            android:name="lastname"
            app:argType="string"/>
        <argument
            android:name="email"
            app:argType="string"/>
        <argument
            android:name="curp"
            app:argType="string"/>
        <argument
            android:name="password"
            app:argType="string"/>
        <action
            android:id="@+id/action_SignupTwoFragment_to_SignupSuccessFragment"
            app:destination="@id/SignupSuccessFragment"
            app:popUpTo="@id/AuthFragment"/>
    </fragment>

    <fragment
        android:id="@+id/SignupSuccessFragment"
        android:name="com.example.mimedicokotlinformedics.ui.signuptwo.SignupSuccessFragment"
        android:label="@string/signup_label"
        tools:layout="@layout/fragment_signup_success">
    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.mimedicokotlinformedics.ui.login.LoginFragment"
        android:label="@string/login_label"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_LoginFragment_to_HomeActivity"
            app:destination="@id/MainActivity" />
    </fragment>

    <activity
        android:id="@+id/MainActivity"
        android:name="com.example.mimedicokotlinformedics.ui.profile.MainActivity"
        android:label="@string/title_activity_home"
        tools:layout="@layout/activity_main">
    </activity>
</navigation>